public/css/styles.css
/* ... */
.clearfix {
  display: inline-block;
}

* html .clearfix {
  height: 1%;
}

/*over-writes*/

.collapsible-header {
  background-color: #F6F7F8;
  padding: 0;
  color: #333;
}

.collection .collection-item.active {
  color: inherit;
}

.collection .collection-item.avatar {
  padding-left: 35px;
  background-color: #F6F7F8;
}

.card-social {
  background-color: #F6F7F8;
}

.card {
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.03), 0 2px 10px 0 rgba(0, 0, 0, 0.03);
  height: 300px;
  position: relative;
  overflow: hidden;
  border-radius: 2px;
}

.audioplayer-volume:hover .audioplayer-volume-adjust {
  bottom: 60%;
}

.footer-copyright {
  background-color: #2C3E50 !important;
}

.api-link {
  margin-left: 2%;
}

.api-link a {
  color: #ffffff;
  text-decoration: none;
}

.audiojs {
  width: 100% !important;
}

/*
# Dashboard Styles
===============================================
*/

/*
Navigations Styles
*/

.nav-container {
  display: none;
  margin-top: -100px;
  background: gray;
  height: 100vh !important;
}

/*
 # Side Page Styles
 =====================
*/

.panel-container span p {
  font-size: 20px;
  margin: 0px;
}

.tab-container {
  margin-top: 50px;
}

/*
 # Episode Page Styles
 =====================
*/

.episode-icon {
  margin: 5px;
}

.fb-share,
.twtr-share,
.no-style-link {
  text-decoration: none;
  color: #999;
}

.no-style-link {
  margin-right: 10px;
}

.fb-share:hover {
  color: #3b5998;
}

.twtr-share:hover {
  color: #0084b4;
}

/*
 # User Page Styles
 =====================
*/

.user-name {
  font-size: 15px;
}

/*
 # Avatar Image
 =====================
*/

img.avatar {
  width: 45px;
  max-width: 1232px;
  height: 45px;
  vertical-align: middle;
}

/*
 #
 =====================
*/

@media (max-width: 600px) {
  .nav-container {
    display: none;
  }
}

/*Show liked and dislike action on button*/

.like,
.dislike {
  color: #777;
}

.like:hover,
.dislike:hover {
  color: #283848;
}

.social-btn {
  cursor: pointer;
}

.social-btn:active {
  transform: scale(1.2);
  transition: 0.10s;
}

.podcast-nav {
  text-align: center;
  padding-top: 20px;
}

.podcast-nav ul li {
  background-color: #2C3E50;
  display: inline;
  padding: 30px;
  margin: 10px;
  border-radius: 360px;
  height: 50%;
}

h4.center-align.padcast-page-header {
  /* font-variant: small-caps; */
  font-weight: bolder;
  font-size: 57px;
  color: #2C3E50;
}

p.flow-text.center-align.padcast-page-sub-header {
  font-size: 18px;
  width: 83%;
  margin: auto;
  margin-bottom: 100px;
}

.podcast {
  background-color: rgba(245, 245, 245, 0.31);
  padding: 20px;
}

.row.podcast:hover {
  box-shadow: 0px 0px 2px #ccc;
}

.podcast .details .podcast-episode-date {
  display: inline-block;
  font-size: 11px;
  letter-spacing: 1px;
  opacity: 0.55;
  font-weight: bold;
  text-transform: uppercase;
  -webkit-font-smoothing: antialiased;
}

.podcast .details .tag {
  background-color: #2C3E50;
  position: absolute;
  right: 30px;
  padding: 3px 10px;
  color: #fff;
}

.podcast .podcast-img {
  border-radius: 10px;
}

.audiojs .scrubber {
  position: relative;
  float: left;
  width: 75%;
  background: #5a5a5a;
  height: 14px;
  margin: 10px;
  border-top: 1px solid #3f3f3f;
  border-left: 0px;
  border-bottom: 0px;
  overflow: hidden;
}

.audiojs .time {
  /* float: left; */
  height: 36px;
  line-height: 36px;
  margin: 0px 0px 0px 6px;
  padding: 0px 6px 0px 12px;
  border-left: 1px solid #000;
  color: #ddd;
  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
}

.podcast-actions {
  padding: 5px;
}

.podcast-actions .social-btn {
  font-size: 20px;
  margin-right: 10px;
}

.comment-action-edit:hover {
  color: #2C3E50;
}

.comment-action-delete:hover {
  color: #d34836;
}

.align-left {
  background-color: #2C3E50;
  padding: 3px 10px;
  color: #fff;
}

.counts {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 18px;
}

.heading {
  font-size: 26px;
  margin-left: 10px;
}

.username {
  max-width: 100px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  float: left;
  margin-top: -2px;
}

.dropdown-button img {
  float: left;
  margin: 10px;
}
body,
html {
  height: 100%;
  position: relative;
  background-color: #E0E0E0;
}

#settings {
  box-shadow: -1px 2px 16px 3px rgba(0, 0, 0, 0.52);
  margin-top: 65px;
  height: 100px;
}

#hero {
  max-height: 500px !important;
  position: relative;
  top: -45px;
}

#hero,
#hero > * {
  width: 100%;
  min-height: 50%;
}

#hero #overlay-image {
  background: url("../images/hero.jpg");
  position: absolute;
  background-size: cover;
  height: 450px;
}

#hero-content {
  position: absolute;
  color: #FFF;
}

#hero-content .content {
  width: 70%;
  margin: 90px auto 0px;
}

#hero-menu {
  position: absolute;
  color: #FFF;
  clear: both;
  top: 20px;
  margin: auto;
  max-height: 50px !important;
  margin-top: 380px;
  font-family: 'robotoLight';
  font-size: 18px;
  padding: 0 10px;
  color: #fff;
  font-size: 13px;
  font-weight: 300;
  line-height: 40px;
  text-decoration: none;
  vertical-align: top;
  white-space: nowrap;
  display: inline-block;
}

#hero-menu a {
  width: 20%;
  float: right;
  margin-top: 5px;
}

.slider-text-header {
  text-align: right;
  font-weight: 500;
  display: table-cell;
  vertical-align: middle;
  font-family: 'robotoMedium';
  color: #fff;
}

.slider-text-paragraph {
  font-size: 19px;
  line-height: 31px;
  font-weight: 300;
}

.footer-copyright {
  background-color: #2C3E50 !important;
}

.api-link {
  margin-left: 2%;
}

.api-link a {
  color: #ffffff;
  text-decoration: none;
}

.feature-content:nth-child(1) {
  margin-top: 95px;
}

.feature-content {
  clear: both;
  min-height: 20px;
  width: 80%;
  background-color: #fff;
  margin: auto auto 20px auto;
}

.text-content h1 {
  color: #2793e6;
  padding: 10px;
  font-size: 25px;
  font-weight: 200;
  line-height: 30px;
}

.text-content .p {
  font-size: 15px;
  font-weight: 400;
  line-height: 24px;
}
/* ... */

